Added data about the hotels to discount.html

--- a/content/practical/discount.html
+++ b/content/practical/discount.html
@@ -12,41 +12,122 @@ title: Hotel discounts
 <p>
 <table class="table table-condensed table-striped table-bordered">
    <tbody>
-     <tr> 
-       <th>3 star hotels</th>
+     <tr>
+       <th>Hotel</th>
+       <th>Rating</th>
+       <th>Address</th>
+       <th>Single room</th>
+       <th>Double room</th>
+       <th>Wifi</th>
+       <th>Contact details</th>
      </tr>
      <tr>
-       <td>Hotel Capital</td>
+       <td><a href="http://hotelcapital.be/">Hotel Capital</a></td>
+       <td>***</td>
+       <td>Chaussee de Vleurgat 191<br>1050 Brussels</td>
+       <td>&euro;65</td>
+       <td>&euro;75</td>
+       <td>Free</td>
+       <td>Phone: +32 (0)2 646 64 20<br>
+           Fax: +32 (0)2 646 33 14<br>
+           E-mail: sales@hotelcapital.be
+       </td>
      </tr>
      <tr>
-       <td>Ibis st. Catherine</td>
+       <td><a href="http://www.accorhotels.com">Ibis st. Catherine</a></td>
+       <td>***</td>
+       <td>Rue Joseph Plateau 2<br>1000 Brussels</td>
+       <td>&euro;73,50</td>
+       <td>&euro;87,50</td>
+       <td>Free</td>
+       <td>Phone: +32 (0)2 541 89 13<br>
+           Fax: +32 (0)2 541 89 59 <br>
+           E-mail: h3152-re2@accor.com
+       </td>
      </tr>
      <tr>
-       <td>Ibis Off Grand Place</td>
+       <td><a href="http://www.accorhotels.com">Ibis Off Grand Place</a></td>
+       <td>***</td>
+       <td>Grasmarkt 100<br>1000 Brussels</td>
+       <td>&euro;83,50</td>
+       <td>&euro;97,50</td>
+       <td>Free</td>
+       <td>Phone: +32 (0)2 541 89 12<br>
+           Fax: +32 (0)2 541 89 59<br>
+           E-mail: h1046-re@accor.com
+       </td>
      </tr>
      <tr>
-       <td>Astrid Centre</td>
-     </tr>
-     <tr> 
-       <th>4 star hotels</th>
-     </tr>
-     <tr>
-       <td>Hotel Bedford</td>
-     </tr>
-     <tr>
-       <td>Four Points by Sheraton</td>
-     </tr>
-     <tr>
-       <td>NH du Grand Sablon</td>
+       <td><a href="http://www.astridhotel.be/">Astrid Centre</a></td>
+       <td>***</td>
+       <td>Place du Samedi 11<br>1000 Brussels</td>
+       <td>&euro;90</td>
+       <td>&euro;90</td>
+       <td>&euro;10/day</td>
+       <td>Phone: +32 (0)2 210 15 32<br>
+           Fax: +32 (0)2 210 15 39<br>
+           E-mail: gres@3sh.be
+       </td>
      </tr>
      <tr>
-       <td>The Hotel</td>
-     </tr>
-     <tr> 
-       <th>5 star hotels</th>
+       <td><a href="http://www.hotelbedford.be/">Hotel Bedford</a></td>
+       <td>****</td>
+       <td>Rue du Midi 135<br>1000 Brussels</td>
+       <td>&euro;75</td>
+       <td>&euro;90</td>
+       <td>Free</td>
+       <td>Phone: +32 (0)2 507 00 20<br>
+           Fax: +32 (0)2 507 00 10<br>
+           E-mail: conference@hotelbedford.be
+       </td>
      </tr>
      <tr>
-       <td>Royal Windsor</td>
+       <td><a href="https://www.starwoodhotels.com/">Four Points by Sheraton</a></td>
+       <td>****</td>
+       <td>Rue Paul Spaak 15<br>1050 Brussels</td>
+       <td>&euro;89</td>
+       <td>&euro;104</td>
+       <td>Free</td>
+       <td>Phone: +32 (0)2 224 39 14<br>
+           Fax: +32 (0)2 224 30 01<br>
+           E-mail: saskia.deferrere@starwoodhotels.com
+       </td>
+     </tr>
+     <tr>
+       <td><a href="http://www.nh-hotels.com/">NH du Grand Sablon</a></td>
+       <td>****</td>
+       <td>Rue Bodenbroek 2-4<br>1000 Brussels</td>
+       <td>&euro;90</td>
+       <td>&euro;105</td>
+       <td>Free</td>
+       <td>Phone: +32 (0)2 214 09 03<br>
+           Fax: +32 (0)2 518 12 99<br>
+           E-mail: g.kittis@nh-hotels.com
+       </td>
+     </tr>
+     <tr>
+       <td><a href="http://www.thehotel-brussels.be/">The Hotel</a></td>
+       <td>****</td>
+       <td>Boulevard de Waterloo 38<br>1000 Brussels</td>
+       <td>&euro;95</td>
+       <td>&euro;115</td>
+       <td>Free</td>
+       <td>Phone: +32 (0)2 504 11 11<br>
+           Fax: +32 (0)2 504 21 11<br>
+           E-mail: celine.bastin@thehotel.be
+       </td>
+     </tr>
+     <tr>
+       <td><a href="http://www.warwickhotels.com/">Royal Windsor</a></td>
+       <td>*****</td>
+       <td>Rue Duquesnoy 5<br>1000 Brussels</td>
+       <td>&euro;115</td>
+       <td>&euro;145</td>
+       <td>Free</td>
+       <td>Phone: +32 (0)2 505 57 90<br>
+           Fax: +32 (0)2 505 57 81<br>
+           E-mail: abaudhuin@warwickhotels.com
+       </td>
      </tr>
   </tbody>
 </table>
