Adapted index.html to reflect that cfp for stands is closed Wrote amounts in discount.html in correct form Added pdf forms for hotels to assets

--- a/content/index.html
+++ b/content/index.html
@@ -37,9 +37,9 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 
   <div class="news-block">
     <h2>CALL FOR PARTICIPATION</h2>
-    <p>While the developer rooms and main tracks have already been decided for this
+    <p>While the developer rooms, main tracks and stands have already been decided for this
     edition, the <a href="page:news/2012-11-01-cfp/">call for participation</a> is still open for
-    lightning talks and stands.</p>
+    lightning talks.</p>
   </div>
 
   <div class="news-block">
