Renamed hotel forms

--- a/content/practical/discount.html
+++ b/content/practical/discount.html
@@ -22,7 +22,9 @@ title: Hotel discounts
        <th>Contact details</th>
      </tr>
      <tr>
-       <td><a href="http://hotelcapital.be/">Hotel Capital</a></td>
+       <td><a href="http://hotelcapital.be/">Hotel Capital</a><br>
+           <a href="asset:capital.pdf">Form</a>
+       </td>
        <td>***</td>
        <td>Chaussee de Vleurgat 191<br>1050 Brussels</td>
        <td>&euro;65.00</td>
