Added the rest of the forms to discount.html

--- a/content/practical/discount.html
+++ b/content/practical/discount.html
@@ -27,7 +27,7 @@ title: Hotel discounts
      <tr>
        <td><a href="http://hotelcapital.be/">Hotel Capital</a></td>
        <td>***</td>
-       <td>Chaussee de Vleurgat 191<br>1050 Brussels</td>
+       <td>Chauss&eacute;e de Vleurgat 191<br>1050 Brussels</td>
        <td>&euro;65.00</td>
        <td>&euro;75.00</td>
        <td>Free</td>
@@ -38,7 +38,7 @@ title: Hotel discounts
        <td><a href="<%= pathof "/assets/accommodation/capital/" %>">Form</a></td>
      </tr>
      <tr>
-       <td><a href="http://www.accorhotels.com">Ibis st. Catherine</a></td>
+       <td><a href="http://www.accorhotels.com">Ibis Sainte Catherine</a></td>
        <td>***</td>
        <td>Rue Joseph Plateau 2<br>1000 Brussels</td>
        <td>&euro;73.50</td>
@@ -48,6 +48,7 @@ title: Hotel discounts
            Fax: +32 (0)2 541 89 59 <br>
            E-mail: h3152-re2@accor.com
        </td>
+       <td><a href="<%= pathof "/assets/accommodation/ibisstcatherine/" %>">Form</a></td>
      </tr>
      <tr>
        <td><a href="http://www.accorhotels.com">Ibis Off Grand Place</a></td>
@@ -60,6 +61,7 @@ title: Hotel discounts
            Fax: +32 (0)2 541 89 59<br>
            E-mail: h1046-re@accor.com
        </td>
+       <td><a href="<%= pathof "/assets/accommodation/ibisogp/" %>">Form</a></td>
      </tr>
      <tr>
        <td><a href="http://www.astridhotel.be/">Astrid Centre</a></td>
@@ -72,6 +74,7 @@ title: Hotel discounts
            Fax: +32 (0)2 210 15 39<br>
            E-mail: gres@3sh.be
        </td>
+       <td><a href="<%= pathof "/assets/accommodation/astrid/" %>">Form</a></td>
      </tr>
      <tr>
        <td><a href="http://www.hotelbedford.be/">Hotel Bedford</a></td>
@@ -84,6 +87,7 @@ title: Hotel discounts
            Fax: +32 (0)2 507 00 10<br>
            E-mail: conference@hotelbedford.be
        </td>
+       <td><a href="<%= pathof "/assets/accommodation/bedford/" %>">Form</a></td>
      </tr>
      <tr>
        <td><a href="https://www.starwoodhotels.com/">Four Points by Sheraton</a></td>
@@ -96,6 +100,7 @@ title: Hotel discounts
            Fax: +32 (0)2 224 30 01<br>
            E-mail: saskia.deferrere@starwoodhotels.com
        </td>
+       <td><a href="<%= pathof "/assets/accommodation/fourpoints/" %>">Form</a></td>
      </tr>
      <tr>
        <td><a href="http://www.nh-hotels.com/">NH du Grand Sablon</a></td>
@@ -108,6 +113,7 @@ title: Hotel discounts
            Fax: +32 (0)2 518 12 99<br>
            E-mail: g.kittis@nh-hotels.com
        </td>
+       <td><a href="<%= pathof "/assets/accommodation/sablon/" %>">Form</a></td>
      </tr>
      <tr>
        <td><a href="http://www.thehotel-brussels.be/">The Hotel</a></td>
@@ -120,6 +126,7 @@ title: Hotel discounts
            Fax: +32 (0)2 504 21 11<br>
            E-mail: celine.bastin@thehotel.be
        </td>
+       <td><a href="<%= pathof "/assets/accommodation/thehotel/" %>">Form</a></td>
      </tr>
      <tr>
        <td><a href="http://www.warwickhotels.com/">Royal Windsor</a></td>
@@ -132,6 +139,7 @@ title: Hotel discounts
            Fax: +32 (0)2 505 57 81<br>
            E-mail: abaudhuin@warwickhotels.com
        </td>
+       <td><a href="<%= pathof "/assets/accommodation/royalwindsor/" %>">Form</a></td>
      </tr>
   </tbody>
 </table>
