accommodation: remove {booking,tripadvisor}.com links
Requested by Charlotte from the Brussels Booking Desk.

--- a/content/practical/accommodation.html
+++ b/content/practical/accommodation.html
@@ -13,16 +13,10 @@ href="http://wikitravel.org/en/Brussels#Sleep">wikitravel</a> also lists some
 places to stay.</p>
 
 <a name="hotels"></a><h2>Hotels</h2>
-<p>Brussels has a large selection of hotels in every price range. Check out
-hotel reviews and prices at
-<a href="http://www.booking.com/searchresults.html?city=-1955538">booking.com</a>
-or
-<a href="http://www.tripadvisor.com/Hotels-g188644-Brussels-Hotels.html">tripadvisor.com</a>.
+<p>
+  Brussels has a large selection of hotels in every price range.
+  The following hotels have a discounted rate available to FOSDEM visitors:
 </p>
-
-<p>A number of hotels in Brussels offer a discount to FOSDEM visitors.</p>
-
-<p>The following hotels have a discounted rate available:</p>
 
 <p>
 <table class="table table-condensed table-striped table-bordered">
