--- a/content/index.html
+++ b/content/index.html
@@ -14,6 +14,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <div class="text-block">
       <h2>FOSDEM is a free event that offers open source communities a place to meet, share ideas and collaborate.</h2>
       <p>It is renowned for being highly developer-oriented and brings together 5000+ geeks from all over the world.</p>
+      <p class="btn-news"><a href="page:/about/#what">No registration necessary.</a></p>
     </div>
     <div class="logo-block">
       <h3><a href="page:/about/sponsors/">SPONSORS</a></h3>
