about: add named block on 'what' part (for 'no registration link from index

--- a/content/about.html
+++ b/content/about.html
@@ -20,16 +20,15 @@ navtitle: About
         <div class="row"><strong>Planet Aggregator:</strong> <a href="http://planet.fosdem.org/">planet.fosdem.org</a></div>
     </div>
     <div class="text-block">
-        <h2>What is FOSDEM?</h2>
-        <p>FOSDEM is a free and non-commercial event organized by the community for the community.<br/>
-        The goal is to provide Free Software and Open Source developers and communities a place to meet to:</p>
+        <h2>What is FOSDEM?<a name="what">&nbsp;</a></h2>
+        <p>FOSDEM is a free and non-commercial event organized by the community for the community. The goal is to provide Free Software and Open Source developers and communities a place to meet to:
         <ul class="info-list">
             <li>get in touch with other developers and projects;</li>
             <li>be informed about the latest developments in the Free Software and Open Source world;</li>
             <li>attend interesting talks and presentations on various topics by Free Software and Open Source project leaders and committers;</li>
             <li>to promote the development and the benefits of Free Software and Open Source solutions.</li>
-        </ul>
-        <p>Participation and attendance is totally free, though the organization gratefully accepts donations and sponsorships.</p>
+        </ul></p>
+        <p>Participation and attendance is <em>totally free</em>, though the organization gratefully accepts donations and sponsorships.</p>
     </div>
 </div>
 <div class="developers-block">
