schedule: do not claim it is complete

--- a/content/schedule/days.html
+++ b/content/schedule/days.html
@@ -24,7 +24,7 @@ title: Time Tables
 <h2>Printable</h2>
 <div class="row-fluid">
   <div class="span8">
-    <p>The complete schedule is also available as a PDF for printing,<br/>
+    <p>The current schedule is also available as a PDF for printing,<br/>
     in the following page sizes:</p>
     <ul class="unstyled">
       <% pdfs.each do |pdf| %>
