--- a/content/schedule/days.html
+++ b/content/schedule/days.html
@@ -17,6 +17,7 @@ title: Time Tables
   </div>
 </div>
 
+<!-- PDFs are empty files?
 <%
   pdfs = items.select{|x| x.identifier =~ %r{^/schedule/pdf/[^/]+/$}}.sort_by{|x| x[:page_size]}
   unless pdfs.empty?
@@ -34,6 +35,7 @@ title: Time Tables
   </div>
 </div>
 <% end %>
+-->
 
 <h2>By Room</h2>
 <div class="row-fluid">
