sightseeing: replace copyrighted atomium image

--- a/content/practical/sightseeing.html
+++ b/content/practical/sightseeing.html
@@ -66,8 +66,8 @@ aliases: /sightseeing
 <br style="margin-bottom: 1em;"/>
 
 <div class="floating-image-container-right">
-    <img src="asset:sightseeing-atomium"/>
-    <span>&copy; <a href="http://creativecommons.org/licenses/by/2.0/" rel="license">CC-BY-2.0</a> by <a href="https://secure.flickr.com/photos/maltesenwordpresscom/953983994/">Maltesen</a></span>
+    <img src="asset:sightseeing-grandplace"/>
+    <span>&copy; <a href="http://creativecommons.org/licenses/by-sa/3.0/" rel="license">CC-BY-SA-3.0</a> by <a href="http://en.wikipedia.org/wiki/File:Maisons_Grand-Place_BXL_01.JPG">Ben2</a></span>
 </div>
 
 <p>
