schedule: make a more prominent note of the beer event

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -56,9 +56,20 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
   <a href="#lightningtalks">lightning talks</a> and
   <a href="#certification">certification exams</a>.
 </p>
+
 <p>
-For a complete (but crowded) overview, there is also a <a href="page:/schedule/events">page that lists all sessions</a>.<br/>
-A <a href="page:/schedule/speakers">list of all speakers</a> is available, too.
+  For a complete (but crowded) overview, there is also a
+  <a href="page:/schedule/events">page that lists all sessions</a>.<br/>
+
+  A <a href="page:/schedule/speakers">list of all speakers</a> is available, too.
+</p>
+
+<a name="beerevent"></a>
+<h3>Friday beer event</h3>
+<p>
+  As tradition has it, on Friday the 1st of February we have the beer event.
+  More information can be found on <a href="/2013/practical/beerevent/">this</a>
+  page.
 </p>
 
 <a name="keynotes"></a>
@@ -330,4 +341,3 @@ A <a href="page:/schedule/speakers">list of all speakers</a> is available, too.
 <% else %>
   <p><span class="label label-info">Certification exams have not been scheduled yet.</span></p>
 <% end %>
-
