--- a/content/about.html
+++ b/content/about.html
@@ -3,112 +3,167 @@ title: About FOSDEM
 navtitle: About
 ---
 <div class="about-us">
-    <div class="image-block">
-        <a href="#"><%= img '/assets/style/logo-big/' %></a>
-    </div>
-    <div class="text-block">
-        <h3>The Free and Open source Software Developers’ European Meeting (FOSDEM) is a two-day event organized by volunteers to promote the widespread use of Free and Open Source software.</h3>
-        <p>Taking place in the beautiful city of <a href="page:practical/transportation">Brussels (Belgium)</a>, FOSDEM meetings are recognized as <q>The best Free Software and Open Source events in Europe</q>.</p>
-    </div>
+  <div class="image-block">
+    <a href="#"><%= img '/assets/style/logo-big/' %></a>
+  </div>
+  <div class="text-block">
+    <h3>
+	The Free and Open source Software Developers’ European Meeting (FOSDEM)
+        is a two-day event organized by volunteers to promote the widespread
+        use of Free and Open Source software.
+    </h3>
+    <p>
+	Taking place in the beautiful city of
+        <a href="page:practical/transportation">Brussels (Belgium)</a>, FOSDEM
+        meetings are recognized as
+
+        <q>The best Free Software and Open Source events in Europe</q>.
+    </p>
+  </div>
 </div>
 <div class="info-block">
-    <div class="more-info">
-        <h2>More information</h2>
-        <div class="row"><strong>Mailing list:</strong> <a href="https://lists.fosdem.org/listinfo/fosdem">fosdem at lists.fosdem.org</a></div>
-        <div class="info-note">We will inform you when news about FOSDEM is available.</div>
-        <div class="row"><strong>News:</strong> <a href="page:atom">atom feed</a>, <a href="page:rss">RSS feed</a></div>
-        <div class="row"><strong>Planet Aggregator:</strong> <a href="http://planet.fosdem.org/">planet.fosdem.org</a></div>
+  <div class="more-info">
+    <h2>More information</h2>
+      <div class="row">
+        <strong>Mailing list:</strong>
+        <a href="https://lists.fosdem.org/listinfo/fosdem">fosdem at lists.fosdem.org</a>
+      </div>
+      <div class="info-note">
+        We will inform you when news about FOSDEM is available.
+      </div>
+      <div class="row">
+        <strong>News:</strong>
+        <a href="page:atom">atom feed</a>, <a href="page:rss">RSS feed</a>
+      </div>
+      <div class="row">
+        <strong>Planet Aggregator:</strong>
+        <a href="http://planet.fosdem.org/">planet.fosdem.org</a>
+      </div>
     </div>
     <div class="text-block">
-        <h2>What is FOSDEM?<a name="what">&nbsp;</a></h2>
-        <p>FOSDEM is a free and non-commercial event organized by the community for the community. The goal is to provide Free Software and Open Source developers and communities a place to meet to:
+      <h2>What is FOSDEM?<a name="what">&nbsp;</a></h2>
+      <p>
+        FOSDEM is a free and non-commercial event organized by the community
+        for the community. The goal is to provide Free Software and Open Source
+        developers and communities a place to meet to:
+
         <ul class="info-list">
-            <li>get in touch with other developers and projects;</li>
-            <li>be informed about the latest developments in the Free Software and Open Source world;</li>
-            <li>attend interesting talks and presentations on various topics by Free Software and Open Source project leaders and committers;</li>
-            <li>to promote the development and the benefits of Free Software and Open Source solutions.</li>
-        </ul></p>
-        <p>Participation and attendance is <em>totally free</em>, though the organization gratefully accepts donations and sponsorships.</p>
+          <li>
+            get in touch with other developers and projects;
+          </li>
+          <li>
+            be informed about the latest developments in the Free Software and
+            Open Source world;
+          </li>
+          <li>
+            attend interesting talks and presentations on various topics by
+            Free Software and Open Source project leaders and committers;
+          </li>
+          <li>
+            to promote the development and the benefits of Free Software and
+            Open Source solutions.
+          </li>
+        </ul>
+      </p>
+      <p>
+        Participation and attendance is <em>totally free</em>, though the
+        organization gratefully accepts donations and sponsorships.
+      </p>
     </div>
 </div>
 <div class="developers-block">
-    <div class="video-block">
-        <embed style="width:400px; height:326px;"
-            id="VideoPlayback"
-            type="application/x-shockwave-flash"
-            src="http://video.google.com/googleplayer.swf?docId=7301032596708213870&amp;hl=en"
-            flashvars="">
-        </embed>
-    </div>
-    <div class="text-block">
-        <h2>Developer Rooms</h2>
-        <p>The FOSDEM team thinks it is very important for Free Software and Open Source developers around the world to be able to meet in “real life”.</p>
-        <p>To this end, we have set up Developer Rooms (DevRooms) with network/internet connectivity and projectors where development teams can meet and showcase their projects. DevRooms are a place for teams to discuss, hack and publicly present latest directions, lightning talks, news and discussions.</p>
-        <p>We believe developers can benefit a lot from these meetings.</p>
-        <p>Last year, there were more than 160 talks in the Developer Rooms in addition to the many main-track talks, the lightning talks, the LPI exams and the PGP/CAcert keysigning events.</p>
-    </div>
+  <div class="text-block">
+    <h2>Developer Rooms</h2>
+    <p>
+      The FOSDEM team thinks it is very important for Free Software and Open
+      Source developers around the world to be able to meet in “real life”.
+    </p>
+    <p>
+      To this end, we have set up Developer Rooms (DevRooms) with
+      network/internet connectivity and projectors where development teams
+      can meet and showcase their projects. DevRooms are a place for teams to
+      discuss, hack and publicly present latest directions, lightning talks,
+      news and discussions.
+    </p>
+    <p>
+      We believe developers can benefit a lot from these meetings.
+    </p>
+    <p>
+      Last year, there were more than 160 talks in the Developer Rooms in
+      addition to the many main-track talks, the lightning talks, the LPI
+      exams and the PGP/CAcert keysigning events.
+    </p>
+  </div>
+  <div class="text-block">
+    <h2>A Bit of History</h2>
+    <p>
+      In 2000, Raphael Bauduin, a fan of the Linux movement in Belgium, decided
+      to organize a small meeting for developers of Open Source software. He
+      called it: Open Source Developers' European Meeting (OSDEM).
+    </p>
 
-    <div class="text-block">
-        <h2>A Bit of History</h2>
-        <p>In 2000, Raphael Bauduin, a fan of the Linux movement in Belgium, decided to
-        organize a small meeting for developers of Open Source software. He called it:
-        Open Source Developers' European Meeting (OSDEM).</p>
+    <p>
+      Raphael created a mailing list, a small website and spread the word to
+      people around him. Only a few weeks later, lots of people were waiting for
+      an exciting event in Brussels!
+    </p>
 
-        <p>Raphael created a mailing list, a small website and spread the word to people
-        around him. Only a few weeks later, lots of people were waiting for an
-        exciting event in Brussels!</p>
+    <p>
+      Invitations were sent to well-known figures in the community: Rasterman,
+      Fyodor, Jeremy Allison and so on. They all gave a very positive response
+      and OSDEM was on the road to success.
+    </p>
 
-        <p>Invitations were sent to well-known figures in the community: Rasterman,
-        Fyodor, Jeremy Allison and so on. They all gave a very positive response and
-        OSDEM was on the road to success.</p>
+    <p>
+      For the second year, OSDEM was renamed FOSDEM. And now, many years later,
+      it has grown into the event it is today.
+    </p>
 
-        <p> For the second year, OSDEM was renamed FOSDEM. And now, many years later, it
-        has grown into the event it is today.</p>
+    <p>
+      We now try to cover a wide spectrum of Open Source and Free Software
+      projects, and offer a platform for people to collaborate in the true Open
+      Source spirit.  Every year, usually during the last weekend of February,
+      we host around 5000 visitors at the ULB Solbosh campus.
+    </p>
 
-        <p>We now try to cover a wide spectrum of Open Source and Free Software
-        projects, and offer a platform for people to collaborate in the true Open
-        Source spirit.  Every year, usually during the last weekend of February, we
-        host around 5000 visitors at the ULB Solbosh campus.</p>
-
-        <p>Raphael is no longer the only one driving FOSDEM. After 7 years of hard work
-        he left the team for new Open Source plans. The FOSDEM flag is now proudly carried
-        by the following people:</p>
-    </div>
-
-    <div class="text-block">
-        <a name="team"></a><h2>The Team</h2>
-        <small>in alphabetical order</small>
-        <ul>
-            <li>Alain Buret</li>
-            <li>Alasdair Kergon</li>
-            <li>Bart Weijs</li>
-            <li>Daniele Lacamera</li>
-            <li>Geert Goossens</li>
-            <li>Gerry Demaret</li>
-            <li>Jan Gyselinck</li>
-            <li>Jan-Frederik Martens</li>
-            <li>Jochen Maes</li>
-            <li>Juan Rial</li>
-            <li>Koen Vervloesem</li>
-            <li>Mark Van den Borre</li>
-            <li>Michael De Swert</li>
-            <li>Nicolas Daisomont</li>
-            <li>Nicole Horward</li>
-            <li>Niels Laukens</li>
-            <li>Pascal Bleser</li>
-            <li>Peter Leemans</li>
-            <li>Philip Paeps</li>
-            <li>Philippe De Swert</li>
-            <li>Pieter Heremans</li>
-            <li>Stella Rouzi</li>
-            <li>Tias Guns</li>
-            <li>Wouter Simons</li>
-            <li>Wouter Verhelst</li>
-            <li>Wynke Stulemeijer</li>
-            <li>Various volunteers who help out during the weekend</li>
-            <li>...</li>
-        </ul>
-    </div>
-
+    <p>
+      Raphael is no longer the only one driving FOSDEM. After 7 years of hard
+      work he left the team for new Open Source plans. The FOSDEM flag is now
+      proudly carried by the following people:
+    </p>
+  </div>
+  <div class="text-block">
+    <a name="team"></a><h2>The Team</h2>
+    <small>in alphabetical order</small>
+    <ul>
+      <li>Alain Buret</li>
+      <li>Alasdair Kergon</li>
+      <li>Bart Weijs</li>
+      <li>Daniele Lacamera</li>
+      <li>Geert Goossens</li>
+      <li>Gerry Demaret</li>
+      <li>Jan-Frederik Martens</li>
+      <li>Jan Gyselinck</li>
+      <li>Jochen Maes</li>
+      <li>Juan Rial</li>
+      <li>Koen Vervloesem</li>
+      <li>Leandro Doctors</li>
+      <li>Mark Van den Borre</li>
+      <li>Michael De Swert</li>
+      <li>Nicolas Daisomont</li>
+      <li>Nicole Horward</li>
+      <li>Pascal Bleser</li>
+      <li>Philip Paeps</li>
+      <li>Philippe De Swert</li>
+      <li>Pieter Heremans</li>
+      <li>Richard Hartmann</li>
+      <li>Stella Rouzi</li>
+      <li>Tias Guns</li>
+      <li>Wouter Simons</li>
+      <li>Wouter Verhelst</li>
+      <li>Wynke Stulemeijer</li>
+      <li>The many volunteers who help out during the weekend</li>
+      <li>...</li>
+    </ul>
+  </div>
 </div>
-
