--- a/content/schedule.html
+++ b/content/schedule.html
@@ -10,7 +10,7 @@ require 'time'
 
 keynotes = events.select{|e| e[:type] == 'keynote'}.sort_by{|e| e[:start_datetime]}
 maintracks = tracks.select{|t| t[:type] == 'maintrack'}.sort_by{|t| [ t[:rank], t[:conference_track_id] ] }
-distroevents = events.select{|e| e[:type] == 'devroom' and e[:track].casecmp('crossdistribution') == 0}
+distroevents = events.select{|e| e[:conference_track_id] ==  track('cross_distro')[:conference_track_id] }
 devrooms = tracks.select{|t| t[:type] == 'devroom'}.sort_by{|t| [ t[:rank], t[:conference_track_id] ] }
 lt_track = tracks.select{|t| t[:type] == 'lightningtalk'}.first
 ltalks = events.select{|e| e[:type] == 'lightningtalk'}.sort_by{|e| e[:start_datetime]}
@@ -214,9 +214,8 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 
 <% unless distroevents.empty? %>
 <p>
-  The exact schedule of the <%= l '/distrominiconf/' %> currently features
-  <%= distroevents.size %> sessions and
-  <%= l '/schedule/track/crossdistribution/' %> can be found here</a>.
+  There are currently <%= distroevents.size %> events scheduled in the
+  <%= l '/schedule/track/cross_distro/' %>.
 </p>
 <% else %>
 <p>
