--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -39,43 +39,10 @@ Or if you prefer GPS coordinates:
 <a name="bus"></a><h3>By Bus and/or Tram</h3>
 <p>From Sunday afternoon till Sunday evening, FOSDEM provides free transportation by bus from the conference site (ULB Campus Solbosch) to the <a href="http://en.wikipedia.org/wiki/Brussels-South_railway_station">Brussels-South railway station</a> which has the best connections to Brussels Airport and neighboring countries.</p>
 <p>The FOSDEM bus will pick up people at the main bus stop on the <q>Avenue de l'Université</q> road facing the ULB. You'll find the exact location on <a href="http://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=&amp;daddr=50.813987,4.384887&amp;hl=en&amp;geocode=&amp;mra=dme&amp;mrcr=0&amp;mrsp=1&amp;sz=20&amp;sll=50.813967,4.384828&amp;sspn=0.000759,0.002064&amp;ie=UTF8&amp;t=h&amp;z=20">this map</a> or simply follow the signalization on the venue.</p>
-<p>The 2 FOSDEM <a href="http://en.wikipedia.org/wiki/Articulated_bus">articulated buses</a> each have a capacity of 140 travelers. From the statistics of last year, we know that the bus will be at maximum capacity between 17:10 and 18:45. If you don't want to risk having to wait for the next bus in that time frame, we advise to leave <del>earlier</del> later. There are plenty of bars in the neighborhood to pass the time.</p>
-<p>We hope you enjoy this free service!</p>
-<p>Here is the bus schedule:</p>
 
-<table style="max-width: 40% !important;" class="table table-condensed table-hover" -->
-    <thead>
-        <tr>
-            <th>Departure at FOSDEM</th>
-            <th></th>
-            <th>Arrival at Brussels-South</th>
-        </tr>
-    </thead>
-    <tbody>
-        <%
-        [
-            %w(15:05 15:30),
-            %w(15:30 15:55),
-            %w(15:55 16:20),
-            %w(16:20 16:45),
-            %w(16:45 17:10),
-            %w(17:10 17:35),
-            %w(17:55 18:20),
-            %w(18:20 18:45),
-            %w(18:45 19:10),
-            %w(19:15 19:40),
-            %w(19:35 20:00),
-            %w(20:05 20:30),
-        ].each do |t|
-        %>
-        <tr>
-            <td style="text-align: right;"><%= t.first %></td>
-            <td>&nbsp;&rarr;&nbsp;</td>
-            <td><%= t.last %></td>
-        </tr>
-        <% end %>
-    </tbody>
-</table>
+<p>Based on previous years, we expect the bus to be busiest between 17:10 and 18:45. If you don't want to risk having to wait for the next bus, we advise you to leave <del>earlier</del> later. There are plenty of bars in the neighborhood to pass the time.</p>
+<p>We hope you enjoy this free service!</p>
+<p><em>The bus schedule will be posted here when the times are confirmed.</em></p>
 
 <a name="regular"></a><h3>Regular transport</h3>
 <p>Metro/Tram/Bus lines provided by the public transport company, STIB/MIVB.</p>
