Eliminate signalization and time tables
signalization -> signs
time tables -> time tables

--- a/content/practical/services.html
+++ b/content/practical/services.html
@@ -14,7 +14,7 @@ We're happy to assist you at one of the Infodesks.</p>
 
 <a name="cloakroom"></a><h2>Cloak room</h2>
 <p>Tired of carrying your coat, bags or umbrella around? Store them at our free and permanently staffed cloak room.</p>
-<p>Simply follow the signalization.</p>
+<p>Simply follow the signs.</p>
 <p><u>Disclaimer:</u> FOSDEM cannot accept responsibility for the loss or
 damage from any cause whatsoever of items left at the cloak room.</p>
 
