--- a/content/schedule.html
+++ b/content/schedule.html
@@ -20,7 +20,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
   <div class="more-info">
     <h2>Quick links:</h2>
 <ul>
-  <li>Time Tables: 
+  <li>Timetables: 
     <%= l days %>
   </li>
   <li>Overview of <a href="<%= pathof '/schedule/roomtracks/' %>">rooms per days</a></li>
