--- a/content/schedule/days.html
+++ b/content/schedule/days.html
@@ -1,5 +1,5 @@
 ---
-title: Time Tables
+title: Timetables
 ---
 <%
 # vim: set ts=2 sw=2 et ai ft=eruby:
@@ -8,7 +8,7 @@ title: Time Tables
 <h2>Overview Grids</h2>
 <div class="row-fluid">
   <div class="span8">
-    <p>Time tables are available for the following day<%= days.size > 1 ? "s" : "" %>:</p>
+    <p>Timetables are available for the following day<%= days.size > 1 ? "s" : "" %>:</p>
     <ul class="unstyled">
       <% days.each do |day| %>
         <li><i class="icon-calendar"></i> <%= l day %></li>
