transportation: remove Freedom bus & update bus routes

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -51,7 +51,7 @@ Or if you prefer GPS coordinates:
   <a href="http://www.stib.be/horaires-dienstregeling2.html?linecode=71&amp;x=14&amp;y=12&amp;l=en&amp;fmodule=s&amp;results=s" 
      title="STIB/MIVB - Bus 71">Bus 71</a></strong></dt>
 <dd><ul>
-<li><strong>Direction: </strong>De Brouckere <-> Delta</li>
+<li><strong>Direction: </strong>From <strong>De Brouckere</strong> in central Brussels towards <strong>Delta</strong></li>
 <li><strong>Stop: </strong>ULB</li>
 </ul></dd>
 <dt><strong>
@@ -59,7 +59,7 @@ Or if you prefer GPS coordinates:
      title="STIB/MIVB - Tram 94">Tram 94</a>
 </strong></dt>
 <dd><ul>
-<li><strong>Direction: </strong>Herrmann-Debroux <-> Stade</li>
+<li><strong>Direction: </strong>From <strong>Stade</strong> through central Brussels towards <strong>Mus&eacute;e du Tram</strong></li>
 <li><strong>Stop: </strong>ULB</li>
 </ul></dd>
 
@@ -68,7 +68,7 @@ Or if you prefer GPS coordinates:
      title="STIB/MIVB - Tram 25">Tram 25</a>
 </strong></dt>
 <dd><ul>
-<li><strong>Direction: </strong>Rogier <-> Boondaal Station</li>
+<li><strong>Direction: </strong>From <strong>Rogier</strong> (near <strong>Gare du Nord</strong>) towards <strong>Boondaal Station</strong></li>
 <li><strong>Stop: </strong>ULB</li>
 </ul></dd>
 </dl>
@@ -110,12 +110,6 @@ From Brussels International Airport, located in <b>Zaventem</b> (about 50 minute
 <li>Take <a href="http://stib.be/appl/EN/40000Eng/B/40071E.htm">Bus 71</a>, direction Delta</li>
 <li>Get off at stop <u>ULB</u>.</li>
 </ul>
-</p>
-
-<a name="fsfe"></a><h3>Bus from Berlin via Hannover, Dortmund and D&uuml;sseldorf</h3>
-<p>
-Some people are organizing a bus service from parts of Germany.  More information at<br/>
-<a href="http://wiki.fsfe.org/FellowshipProjects/FreedomTours">http://wiki.fsfe.org/FellowshipProjects/FreedomTours</a>
 </p>
 
 <hr />
