--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -7,7 +7,7 @@ sponsors_under_navigation: true
 %>
 Ways to have the schedule with you at all times, without wasting trees: 
 
-<h2>Mobile site</h2>
+<h3>Mobile site</h3>
 <ul>
  <a href="http://fosdem.org/mobile/">http://fosdem.org/mobile/</a>
 </ul>
@@ -19,64 +19,50 @@ It is pretty hefty (a bit over 600kb in size) but includes everything when fetch
 </p>
 
 
-<h2>Apps for Mobile Devices, tested for 2013</h2>
-
-
-
-<h2>Apps for Mobile Devices, archive from 2012 and before</h2>
-<h4>Android</h4>
+<h3>Apps for Mobile Devices, tested for 2013</h3>
 <ul>
-<li><b>fosdem-android</b><br />
-    <a href="https://sourceforge.net/projects/fosdem-android">Source code</a><br />
-    Available from the android market<br />
-</li>
-<li><b>Giggity</b><br />
+<li><b>Android: Giggity</b><br />
     <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a><br />
     Available from the android market<br />
-    Available from F-droid market, also has <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">direct link to apk</a><br />
+    Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a><br />
 </li>
-</ul>
-
-<h4>WebOS</h4>
-<ul>
-<li><b>fosdem-webos</b><br />
+<li><b>Android: fosdem-android</b><br />
+    <a href="https://sourceforge.net/projects/fosdem-android">Source code</a><br />
+    <a href="https://github.com/rkallensee/fosdem-android">Github fork for 2013</a><br />
+    Direct <a href="http://forge.webpresso.net/projects/fosdem-android/files">apk download</a><br />
+    Available from the android market *soon*<br />
+</li>
+<li><b>WebOS: fosdem-webos</b><br />
     <a href="http://forge.webpresso.net/projects/fosdem-webos">Website and source code</a><br />
     Available from the <a href="https://developer.palm.com/appredirect/?packageid=net.webpresso.fosdem">HP App Catalog</a><br />
+    Direct <a href="http://forge.webpresso.net/attachments/download/33/net.webpresso.fosdem_0.2.11_all.ipk">ipk download</a><br />
+</li>
 </ul>
+Others? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
 
-<h4>N900</h4>
+
+<h3>Apps for Mobile Devices, archive from 2012 and before</h3>
 <ul>
-<li><b>Sojourner</b><br />
+<li><b>N900: Sojourner</b><br />
     <a href="http://willthompson.co.uk/sojourner/">Website</a><br />
     <a href="http://gitorious.org/sojourner/">Original source code</a><br />
     <a href="http://git.altlinux.org/people/thresh/public/sojourner.git">Clone for 2012</a>
-</ul>
-
-<h4>n9/N9500</h4>
-<ul>
-<li><b>rzr fosdem-schedule</b><br />
+</li>
+<li><b>n9/N9500: rzr fosdem-schedule</b><br />
     <a href="http://www.who.is.free.fr/wiki/doku.php?id=be#">Website (scroll a bit down for installation instructions)</a><br />
     <a href="https://build.pub.meego.com/package/show?package=fosdem-schedule&project=home%3Arzr%3Aharmattan">Source code</a>
 </li>
-</ul>
-
-<h4>Debian</h4>
-<ul><li><b>(repackaged) fosdem-maemo</b><br />
+<li><b>Debian: (repackaged) fosdem-maemo</b><br />
     <a href="http://sourceforge.net/projects/fosdem-maemo/">Source code</a><br />
     Last confirmed in 2011.
-</li></ul>
-
-<h4>Symbian</h4>
-<ul><li><b>semperFosdem</b><br />
+</li>
+<li><b>Symbian: semperFosdem</b><br />
     Port of fosdem-schedule for Symbian S60/Qt<br />
     <a href="http://redmine.semperpax.com/projects/semperfosdem/wiki">Website</a><br />
     Last confirmed in 2011.
-</li></ul>
+</li>
+</ul>
 
 <p>
-Thanks to Pascal Bleser, Wilmer van der Gaast, Gregor Herrmann, Will Thompson, Raphael Kallensee, Michael Uyttersprot, Chris Browet, Niels Langendorff and others for these great pieces of open-source software! 
-</p>
-
-<p>
-For feedback and/or contributions, please poke us on <a href="mailto:info@fosdem.org"</a>info@fosdem.org</a>.
+Feedback and/or contributions? Share it on <a href="mailto:fosdem@lists.fosdem.org"</a>fosdem@lists.fosdem.org</a>.
 </p>
