mobile: raw schedule data

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -63,6 +63,16 @@ Others? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosd
 </li>
 </ul>
 
+<h3>Raw schedule data</h3>
+<p>
+The schedule data is available in:
+<ul>
+<li>Pentabarf <a href="<%= pathof '/schedule/pentabarf/' %>">XML</a>
+<li><a href="<%= pathof '/schedule/ical/' %>">iCal</a>
+<li><a href="<%= pathof '/schedule/xcal/' %>">xCal</a>
+</ul>
+</p>
+
 <p>
 Feedback and/or contributions? Share it on <a href="mailto:fosdem@lists.fosdem.org"</a>fosdem@lists.fosdem.org</a>.
 </p>
