mobile: N9500 -> N950, noticed by Olof Johansson

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -48,7 +48,7 @@ Others? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosd
     <a href="http://gitorious.org/sojourner/">Original source code</a><br />
     <a href="http://git.altlinux.org/people/thresh/public/sojourner.git">Clone for 2012</a>
 </li>
-<li><b>n9/N9500: rzr fosdem-schedule</b><br />
+<li><b>N9/N950: rzr fosdem-schedule</b><br />
     <a href="http://www.who.is.free.fr/wiki/doku.php?id=be#">Website (scroll a bit down for installation instructions)</a><br />
     <a href="https://build.pub.meego.com/package/show?package=fosdem-schedule&project=home%3Arzr%3Aharmattan">Source code</a>
 </li>
