mobile: QT-based confclerk

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -37,6 +37,11 @@ It is pretty hefty (a bit over 600kb in size) but includes everything when fetch
     Available from the <a href="https://developer.palm.com/appredirect/?packageid=net.webpresso.fosdem">HP App Catalog</a><br />
     Direct <a href="http://forge.webpresso.net/attachments/download/33/net.webpresso.fosdem_0.2.11_all.ipk">ipk download</a><br />
 </li>
+<li><b>QT-based (Desktops, Maemo5): confclerk</b><br />
+    <a href="http://www.toastfreeware.priv.at/confclerk">Website and source code</a><br />
+    Available in official Debian, Ubuntu and Maemo5 repositories<br />
+    (the successor of <a href="http://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>)<br />
+</li>
 </ul>
 Others? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
 
@@ -51,10 +56,6 @@ Others? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosd
 <li><b>N9/N950: rzr fosdem-schedule</b><br />
     <a href="http://www.who.is.free.fr/wiki/doku.php?id=be#">Website (scroll a bit down for installation instructions)</a><br />
     <a href="https://build.pub.meego.com/package/show?package=fosdem-schedule&project=home%3Arzr%3Aharmattan">Source code</a>
-</li>
-<li><b>Debian: (repackaged) fosdem-maemo</b><br />
-    <a href="http://sourceforge.net/projects/fosdem-maemo/">Source code</a><br />
-    Last confirmed in 2011.
 </li>
 <li><b>Symbian: semperFosdem</b><br />
     Port of fosdem-schedule for Symbian S60/Qt<br />
