mobile: iphone app

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -42,6 +42,10 @@ It is pretty hefty (a bit over 600kb in size) but includes everything when fetch
     Available in official Debian, Ubuntu and Maemo5 repositories<br />
     (the successor of <a href="http://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>)<br />
 </li>
+<li><b>iPhone: fosdem-iphone</b><br />
+    <a href="https://github.com/leonhandreke/fosdem">Source code</a><br />
+    Available from the apple market *soon*<br />
+</li>
 </ul>
 Others? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
 
