--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -22,29 +22,29 @@ It is pretty hefty (a bit over 600kb in size) but includes everything when fetch
 <h3>Apps for Mobile Devices, tested for 2013</h3>
 <ul>
 <li><b>Android: Giggity</b><br />
-    <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a><br />
-    Available from the android market<br />
-    Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a><br />
+    <a href="http://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
+    Available from the android market,<br />
+    Available from F-droid market, also has direct <a href="http://f-droid.org/repository/browse/?fdfilter=fosdem&fdid=net.gaast.giggity">apk download</a>.<br />
 </li>
 <li><b>Android: fosdem-android</b><br />
-    <a href="https://sourceforge.net/projects/fosdem-android">Source code</a><br />
-    <a href="https://github.com/rkallensee/fosdem-android">Github fork for 2013</a><br />
-    Direct <a href="http://forge.webpresso.net/projects/fosdem-android/files">apk download</a><br />
-    Available from the android market *soon*<br />
+    <a href="https://sourceforge.net/projects/fosdem-android">Source code</a>,<br />
+    <a href="https://github.com/rkallensee/fosdem-android">Github fork for 2013</a>,<br />
+    Direct <a href="http://forge.webpresso.net/projects/fosdem-android/files">apk download</a>,<br />
+    Available from the android market *soon*.<br />
 </li>
 <li><b>WebOS: fosdem-webos</b><br />
-    <a href="http://forge.webpresso.net/projects/fosdem-webos">Website and source code</a><br />
-    Available from the <a href="https://developer.palm.com/appredirect/?packageid=net.webpresso.fosdem">HP App Catalog</a><br />
-    Direct <a href="http://forge.webpresso.net/attachments/download/33/net.webpresso.fosdem_0.2.11_all.ipk">ipk download</a><br />
+    <a href="http://forge.webpresso.net/projects/fosdem-webos">Website and source code</a>,<br />
+    Available from the <a href="https://developer.palm.com/appredirect/?packageid=net.webpresso.fosdem">HP App Catalog</a>,<br />
+    Direct <a href="http://forge.webpresso.net/attachments/download/33/net.webpresso.fosdem_0.2.11_all.ipk">ipk download</a>.<br />
 </li>
 <li><b>QT-based (Desktops, Maemo5): confclerk</b><br />
-    <a href="http://www.toastfreeware.priv.at/confclerk">Website and source code</a><br />
-    Available in official Debian, Ubuntu and Maemo5 repositories<br />
-    (the successor of <a href="http://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>)<br />
+    <a href="http://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br />
+    Available in official Debian, Ubuntu and Maemo5 repositories,<br />
+    (the successor of <a href="http://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>).<br />
 </li>
 <li><b>iPhone: fosdem-iphone</b><br />
-    <a href="https://github.com/leonhandreke/fosdem">Source code</a><br />
-    Available from the apple market *soon*<br />
+    <a href="https://github.com/leonhandreke/fosdem">Source code</a>,<br />
+    Available from the apple market *soon*.<br />
 </li>
 </ul>
 Others? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
@@ -53,17 +53,17 @@ Others? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosd
 <h3>Apps for Mobile Devices, archive from 2012 and before</h3>
 <ul>
 <li><b>N900: Sojourner</b><br />
-    <a href="http://willthompson.co.uk/sojourner/">Website</a><br />
-    <a href="http://gitorious.org/sojourner/">Original source code</a><br />
-    <a href="http://git.altlinux.org/people/thresh/public/sojourner.git">Clone for 2012</a>
+    <a href="http://willthompson.co.uk/sojourner/">Website</a>,<br />
+    <a href="http://gitorious.org/sojourner/">Original source code</a>,<br />
+    <a href="http://git.altlinux.org/people/thresh/public/sojourner.git">Clone for 2012.</a>
 </li>
 <li><b>N9/N950: rzr fosdem-schedule</b><br />
-    <a href="http://www.who.is.free.fr/wiki/doku.php?id=be#">Website (scroll a bit down for installation instructions)</a><br />
-    <a href="https://build.pub.meego.com/package/show?package=fosdem-schedule&project=home%3Arzr%3Aharmattan">Source code</a>
+    <a href="http://www.who.is.free.fr/wiki/doku.php?id=be#">Website (scroll a bit down for installation instructions)</a>,<br />
+    <a href="https://build.pub.meego.com/package/show?package=fosdem-schedule&project=home%3Arzr%3Aharmattan">Source code</a>.<br />
 </li>
 <li><b>Symbian: semperFosdem</b><br />
-    Port of fosdem-schedule for Symbian S60/Qt<br />
-    <a href="http://redmine.semperpax.com/projects/semperfosdem/wiki">Website</a><br />
+    Port of fosdem-schedule for Symbian S60/Qt,<br />
+    <a href="http://redmine.semperpax.com/projects/semperfosdem/wiki">Website</a>,<br />
     Last confirmed in 2011.
 </li>
 </ul>
