--- a/content/schedule.html
+++ b/content/schedule.html
@@ -26,6 +26,15 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
   <li>Overview of <a href="<%= pathof '/schedule/roomtracks/' %>">rooms per days</a></li>
   <li>Mobile site: <a href="<%= pathof '/mobile/' %>">http://fosdem.org/mobile</a></li>
   <li>Mobile apps: <a href="<%= pathof '/schedule/mobile/' %>">many platforms</a></li>
+<%
+  pdfs = items.select{|x| x.identifier =~ %r{^/schedule/pdf/[^/]+/$}}.sort_by{|x| x[:page_size]}.reverse
+  unless pdfs.empty?
+%>
+  <li>Printable PDF:
+  <% pdfs.each do |pdf| %>
+    <%= l(pdf, pdf[:page_size].to_s.upcase) %>
+  <% end %>
+<% end %>
 </ul>
     </div>
     <div>
