transportation: spell Solbosch correctly everywhere

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -5,13 +5,13 @@ sponsors_under_navigation: true
 ---
 <p>FOSDEM will take place at the ULB Campus Solbosch, Brussels, Belgium, Europe, Earth.</p>
 
-<a href="asset:campusmap" style="float: right; text-align: right"><img src="asset:campusmap-thumbnail" alt="ULB Campus Solbosh map: Location of FOSDEM" title="ULB Campus Solbosh map: Location of FOSDEM"}/>
+<a href="asset:campusmap" style="float: right; text-align: right"><img src="asset:campusmap-thumbnail" alt="ULB Campus Solbosch map: Location of FOSDEM" title="ULB Campus Solbosch map: Location of FOSDEM"}/>
 <br />(Click for larger version)</a>
 
 <p>
 <b>
-ULB Campus Solbosh<br>
-Avenue Franklin D. Roosevelt, 50<br>
+ULB Campus Solbosch<br>
+50, Avenue Franklin D. Roosevelt<br>
 1050 Bruxelles
 </b>
 </p>
