--- a/content/stands.html
+++ b/content/stands.html
@@ -2,10 +2,53 @@
 # vim: set ts=2 sw=2 et ai ft=eruby:
 title: Stands
 stands:
-  K [level 1] (22):
-  K [level 2] (17):
-  AW (10):
-  H (4):
+  K [level 1] (18):
+    - KDE
+    - QT Project
+    - Gnome
+    - CentOS
+    - Mageia
+    - Ubuntu
+    - Fedora
+    - openSuse
+    - debian
+    - ownCloud
+    - oVirt
+    - GlusterFS
+    - Xen.org
+    - FSFe
+    - Mozilla
+    - Libre Graphics Magazine
+    - OpenStreetMap
+    - CaCert
+  K [level 2] (13):
+    - MySQL
+    - Apache OpenOffice
+    - Perl community
+    - Jenkins
+    - Eclipse
+    - LibreOffice
+    - MongoDB
+    - Puppet
+    - OWASP
+    - PostgreSQL
+    - BSDs
+    - Jabber-realtime
+    - Jitsi
+  AW (9):
+    - Hackable Devices
+    - World of OpenPhoenux
+    - BeagleBoard
+    - OpenEmbedded
+    - Jolla/Sailfish
+    - Aldebaran
+    - CoreBoot+Flashrom
+    - CodeBender
+    - Enlightenment
+  H (3):
+    - O'Reilly
+    - Job Corner
+    - Announcements Corner
 ---
 <%
   # parse stands meta
