accommodation & transportation: link to wikivoyage instead of wikitravel

--- a/content/practical/accommodation.html
+++ b/content/practical/accommodation.html
@@ -9,7 +9,7 @@ title: Accommodation
 list of popular accommodations for FOSDEM visitors to get you started. You can
 also check <a href="http://lists.fosdem.org/mailman/listinfo">the mailing
 list</a> for more information. <a target="_blank"
-href="http://wikitravel.org/en/Brussels#Sleep">wikitravel</a> also lists some
+href="http://en.wikivoyage.org/wiki/Brussels#Sleep">wikivoyage</a> also lists some
 places to stay.</p>
 
 <a name="hotels"></a><h2>Hotels</h2>
