--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -44,7 +44,7 @@ It is pretty hefty (a bit over 600kb in size) but includes everything when fetch
 </li>
 <li><b>iPhone: fosdem-iphone</b><br />
     <a href="https://github.com/leonhandreke/fosdem">Source code</a>,<br />
-    Available from the apple market *soon*.<br />
+    Available from <a href="https://itunes.apple.com/gb/app/fosdem/id595196580?mt=8">the Apple market</a>.<br />
 </li>
 </ul>
 Others? Let us know on our public mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
