Added link to Android app

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -30,7 +30,7 @@ It is pretty hefty (a bit over 600kb in size) but includes everything when fetch
     <a href="https://sourceforge.net/projects/fosdem-android">Source code</a>,<br />
     <a href="https://github.com/rkallensee/fosdem-android">Github fork for 2013</a>,<br />
     Direct <a href="http://forge.webpresso.net/projects/fosdem-android/files">apk download</a>,<br />
-    Available from the android market *soon*.<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=org.fosdem">the android market</a>.<br />
 </li>
 <li><b>WebOS: fosdem-webos</b><br />
     <a href="http://forge.webpresso.net/projects/fosdem-webos">Website and source code</a>,<br />
