Added waffles and vegetarian food to catering

--- a/content/practical/catering.html
+++ b/content/practical/catering.html
@@ -13,13 +13,12 @@ day?</p>
 <% end %>
 
 <h2>Lunch</h2>
-<p>Cold sandwiches, grilled chicken or ham sandwiches, fries, hamburgers: We'll
-make sure you don't starve.</p>
+<p>Cold sandwiches, grilled chicken or ham sandwiches, fries, hamburgers,
+vegetarian food (from <a
+href="http://justlikeyourmom.com/catering/index.html">justlikeyourmom.com</a>),
+waffles: We'll make sure you don't starve.</p>
 
-<p>All the hot food can be purchased at the catering vans parked outside the H
-building and will be available from 11:15 on. A selection of cold sandwiches
-can be purchased at Bar 1 and Bar 2. Simply follow the arrows (or your nose) if
-you're not quite sure where it is.</p>
+<p>All the hot food can be purchased at the catering vans parked outside the H building and will be available from 11:15 on. A selection of cold sandwiches can be purchased at the Bar and at the Janson auditorium. Simply follow the arrows (or your nose) if you're not quite sure where it is.</p>
 
 <h2>Dinner</h2>
 <p>FOSDEM takes place in Brussels so there are plenty of restaurants around.
@@ -29,9 +28,9 @@ It would be difficult to recommend one, but have a look at
 if you are looking for something specific.</p>
 
 <h2>Beverages</h2>
-<p>Coffee, tea, beer, water and soft drinks can be purchased at Bar 1 and Bar
-2. Please respect the environment and return all glass bottles when they are
-empty.</p>
+<p>Coffee, tea, beer, water and soft drinks can be purchased at the Bar and at
+Janson. Please respect the environment and return all glass bottles when they
+are empty.</p>
 
 <h2>Snacks</h2>
 <p>Feel like snacking? Crave for a candy bar or a bag of potato chips? We've
