Added time and place to keysigning

--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -92,8 +92,11 @@ gpg --verify ksp-<%= klist %>.txt.asc ksp-<%= klist %>.txt
 </pre>
 
 <p>
+  The keysigning event takes place on Sunday, at 14:00, in the corridor on the
+  second level of the U building.
   Please bring the printed list, a pen and appropriate form of identification
-  with you to FOSDEM.  Be on time!
+  with you to FOSDEM.
+  Be on time!
 </p>
 
 <h3>After the event</h3>
