SSID is FOSDEM not fosdem

--- a/content/practical/services.html
+++ b/content/practical/services.html
@@ -10,7 +10,7 @@ We're happy to assist you at one of the Infodesks.</p>
 
 <a name="network"></a><h2>Network</h2>
 <p>Wireless IPv4/IPv6 internet access is be available in most locations.</p>
-<p>The SSID is <code>fosdem</code></p>
+<p>The SSID is <code>FOSDEM</code></p>
 
 <a name="cloakroom"></a><h2>Cloak room</h2>
 <p>Tired of carrying your coat, bags or umbrella around? Store them at our free and permanently staffed cloak room.</p>
