Updated location of main infodesk and lost&found in services Added parking info to transportation

--- a/content/practical/services.html
+++ b/content/practical/services.html
@@ -6,7 +6,7 @@ navtitle: During the Event
 <a name="infodesk"></a><h2>Infodesk</h2>
 <p>Need information about scheduled talks, the location of the rooms or other practicalities?<br/>
 We're happy to assist you at one of the Infodesks.</p>
-<p>The main infodesk is located in the H building.</p>
+<p>Starting in 2013, The main infodesk is located in the K building.</p>
 
 <a name="network"></a><h2>Network</h2>
 <p>Wireless IPv4/IPv6 internet access is be available in most locations.</p>
@@ -38,5 +38,5 @@ the back.</p>
 </ul>
 
 <a name="lostfound"></a><h2>Lost &amp; found</h2>
-<p>Found or lost something? Head over to the Infodesk in the H building.</p>
+<p>Found or lost something? Head over to the Infodesk in the K building.</p>
 
