--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -101,6 +101,18 @@ All of them stop at "ULB".<br/>
 <li><a href="http://hari.b-holding.be/hafas/bin/query.exe/en?seqnr=1&amp;ident=fh.0180413.1232584630&amp;OK#focus">timetable for Etterbeek to Bruxelles midi on Sunday at 18:30</a>, takes 25min to Brussels South station, only a train every hour</li></ul></p>
 </p>
 
+<a name="parking"></a><h3>Parking</h3>
+<p>
+If you come to FOSDEM by car, you can park your car on the campus.
+The parking is located between Janson and the K building. 
+See the map on this page for the exact location.
+The entrance to the parking is next to the H building.
+</p>
+<p>
+You can park here at your own risk.
+Do not leave any valuables in your car!
+</p>
+
 <a name="plane"></a><h3>By Plane</h3>
 <p>
 From Brussels International Airport, located in <b>Zaventem</b> (about 50 minutes):
