--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -5,8 +5,7 @@ sponsors_under_navigation: true
 ---
 <p>FOSDEM will take place at the ULB Campus Solbosch, Brussels, Belgium, Europe, Earth.</p>
 
-<a href="asset:campusmap" style="float: right; text-align: right"><img src="asset:campusmap-thumbnail" alt="ULB Campus Solbosch map: Location of FOSDEM" title="ULB Campus Solbosch map: Location of FOSDEM"}/>
-<br />(Click for larger version)</a>
+<img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Campus Solbosch map: Location of FOSDEM" title="ULB Campus Solbosch map: Location of FOSDEM"}/>
 
 <p>
 <b>
