transportation: fix broken link to NMBS timetable

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -97,7 +97,7 @@ All of them stop at "ULB".<br/>
 <p>From <strong>Etterbeek</strong> station (about <strong>20 minutes</strong> (walk)):
 <ul style="margin-top:0">
 <li><a href="http://maps.google.com/maps?f=d&amp;source=s_d&amp;saddr=Paul+H%C3%A9gerlaan&amp;daddr=50.817107,4.392364+to:Etterbeek+station&amp;geocode=Fb9WBwMdntZCAA%3B%3B&amp;hl=en&amp;mra=dme&amp;mrcr=0&amp;mrsp=1&amp;sz=16&amp;via=1&amp;dirflg=w&amp;sll=50.816104,4.387987&amp;sspn=0.010087,0.01442&amp;ie=UTF8&amp;t=h&amp;z=16">directions from ULB/FOSDEM to the Etterbeek train station</a></li>
-<li><a href="http://hari.b-holding.be/hafas/bin/query.exe/en?seqnr=1&amp;ident=fh.0180413.1232584630&amp;OK#focus">timetable for Etterbeek to Bruxelles midi on Sunday at 18:30</a>, takes 25min to Brussels South station, only a train every hour</li></ul></p>
+<li><a href="http://www.belgianrail.be/jp/sncb-nmbs-routeplanner/query.exe/en?S=Etterbeek+%5bB%5d&Z=Brussel-Zuid&date=03/02/2013&time=18:30&start=1&timesel=depart">timetable for Etterbeek to Bruxelles midi on Sunday at 18:30</a>, takes 25min to Brussels South station, only a train every hour</li></ul></p>
 </p>
 
 <a name="parking"></a><h3>Parking</h3>
