--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -43,6 +43,82 @@ Or if you prefer GPS coordinates:
 <p>We hope you enjoy this free service!</p>
 <p><em>The bus schedule will be posted here when the times are confirmed.</em></p>
 
+<p>
+<div class="container-fluid">
+<div class="row-fluid">
+<div class="span3">
+<table class="table table-striped table-bordered table-condensed">
+   <thead>
+     <tr>
+       <th>Departure</th>
+       <th>Arrival</th>
+     </tr>
+   </thead>
+   <tbody>
+     <tr>
+       <td>15:00</td>
+       <td>15:25</td>
+     </tr>
+     <tr>
+       <td>15:30</td>
+       <td>15:55</td>
+     </tr>
+     <tr>
+       <td>16:00</td>
+       <td>16:25</td>
+     </tr>
+     <tr>
+       <td>16:30</td>
+       <td>16:55</td>
+     </tr>
+     <tr>
+       <td>17:00</td>
+       <td>17:25</td>
+     </tr>
+   </tbody>
+</table>
+<div class="span3 offset1">
+<table class="table table-striped table-bordered table-condensed">
+   <thead>
+     <tr>
+       <th>Departure</th>
+       <th>Arrival</th>
+     </tr>
+     <tr>
+       <td>17:30</td>
+       <td>17:55</td>
+     </tr>
+     <tr>
+       <td>18:00</td>
+       <td>18:25</td>
+     </tr>
+     <tr>
+       <td>18:30</td>
+       <td>18:55</td>
+     </tr>
+     <tr>
+       <td>19:00</td>
+       <td>19:25</td>
+     </tr>
+     <tr>
+       <td>19:30</td>
+       <td>19:55</td>
+     </tr>
+     <tr>
+       <td>20:00</td>
+       <td>20:25</td>
+     </tr>
+     <tr>
+       <td>20:30</td>
+       <td>20:55</td>
+     </tr>
+   </tbody>
+</table>
+</div>
+</div>
+</div>
+</p>
+
 <a name="regular"></a><h3>Regular transport</h3>
 <p>Metro/Tram/Bus lines provided by the public transport company, STIB/MIVB.</p>
 <dl>
