--- a/content/index.html
+++ b/content/index.html
@@ -39,7 +39,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     <h2>Feedback!?</h2>
     <p>FOSDEM 2013 is over and it was once again a HUGE success!</p>
 
-    <p>A big, enourmeous massive thanks to all the volunteers, speakers and visitors for making it so aweseome.</p>
+    <p>A big, enourmeous massive thanks to all the volunteers, speakers and visitors for making it so awesome.</p>
 
     <p>Before we hibernate for half a year, we want to know one thing from you: <b>what did you like, what didn't you like?</b>
     </p>
