Mobile website is UNFINISHED and should not be used as currently is

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -7,6 +7,7 @@ sponsors_under_navigation: true
 %>
 Ways to have the schedule with you at all times, without wasting trees: 
 
+<!-- UNFINISHED!!
 <h3>Mobile site</h3>
 <ul>
  <a href="http://fosdem.org/mobile/">http://fosdem.org/mobile/</a>
@@ -17,6 +18,7 @@ The online mobile schedule uses jQueryMobile 1.0a2 and hence supports all the pl
 <p>
 It is pretty hefty (a bit over 600kb in size) but includes everything when fetching that single URL, except the details about speakers and talks that are downloaded from the m.fosdem.org site when consulted.
 </p>
+UNFINISHED!! -->
 
 
 <h3>Apps for Mobile Devices, tested for 2013</h3>
