--- a/content/schedule.html
+++ b/content/schedule.html
@@ -24,7 +24,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
     <%= l days %>
   </li>
   <li>Overview of <a href="<%= pathof '/schedule/roomtracks/' %>">rooms per days</a></li>
-  <li>Mobile site: <a href="<%= pathof '/mobile/' %>">http://fosdem.org/mobile</a></li>
+  <!-- UNFINISHED <li>Mobile site: <a href="<%= pathof '/mobile/' %>">http://fosdem.org/mobile</a></li> -->
   <li>Mobile apps: <a href="<%= pathof '/schedule/mobile/' %>">many platforms</a></li>
 <%
   pdfs = items.select{|x| x.identifier =~ %r{^/schedule/pdf/[^/]+/$}}.sort_by{|x| x[:page_size]}.reverse
