Make dates top-news

--- a/content/index.html
+++ b/content/index.html
@@ -35,12 +35,18 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     </div>
   </div>
 
-  <!--
   <div class="news-block">
-    <h2>Feedback!?</h2>
-    <p>FOSDEM 2013 is over and it was once again a HUGE success!</p>
+    <h2>FOSDEM 2014 dates</h2>
+<p>
+  We are pleased to announce that FOSDEM 2014 will take place at ULB Campus
+  Solbosch on <b>Saturday 1 and Sunday 2 February 2014</b>.  Further details and
+  calls for participation will be announced in due course.
+</p>
+
+<p>
+  Have a nice summer!
+</p>
   </div>
-  -->
 
   <div class="news-block">
     <h2>NEWS</h2>
